Add teamIds to answers

--- a/docs/fw_forms.yaml
+++ b/docs/fw_forms.yaml
@@ -801,6 +801,8 @@ components:
           readOnly: true
         fullName:
           type: string
+        teamId:
+          type: string
       required:
         - report
         - reportName
